Optimize Maven runtime